--- a/wwwroot/css/Login.css
+++ b/wwwroot/css/Login.css
@@ -7,7 +7,7 @@
 }
 
 .company__info {
-    background-color: #008080;
+    background-color: #07052e;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     display: flex;
@@ -42,8 +42,8 @@
 }
 
 .row > h2 {
-    color: #008080;
-    padding-left:90px;
+    color: #07052e;
+    padding-left: 90px;
 }
 
 .login_form {
@@ -71,7 +71,7 @@ form {
 }
 
     .form__input:focus {
-        border-bottom-color: #008080;
+        border-bottom-color: #07052e;
         box-shadow: 0 0 5px rgba(0,80,80,.4);
         border-radius: 4px;
     }
@@ -80,16 +80,15 @@ form {
     transition: all .5s ease;
     width: 70%;
     border-radius: 30px;
-    color: #008080;
+    color: #07052e;
     font-weight: 600;
     background-color: #fff;
-    border: 1px solid #008080;
+    border: 1px solid #07052e;
     margin-top: 1.5em;
     margin-bottom: 1em;
-   
 }
 
     .btn:hover, .btn:focus {
-        background-color: #008080;
+        background-color: #07052e;
         color: #fff;
     }
