--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,9 +11,9 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    
-    </head>
+    
 
-<body style="margin:0">
+@* <body style="margin:0">
     <header>
         <div class="container-fluid">
 
@@ -59,5 +59,73 @@
         </button>
 
     </div>
+  
+    </div>
+</body> *@
+
+    <style>
+        .container {
+            display: flex;
+          /*   justify-content: space-between; */
+            min-height: 100vh; /* Added this line */
+        }
+
+        .left {
+            width: 50%;
+            background-size: cover;
+            background-position: center;
+            background-colour:#008080;
+        }
+
+        .right {
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+          
+        }
+
+        .button {
+            margin: 10px;
+            padding: 10px 20px;
+            background-color: #07052e;
+            color: white;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            border-radius: 12px;
+            
+        }
+
+            .button:hover {
+                background-color: white;
+                color: black;
+                border: 2px solid #4CAF50;
+            }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <div class="left"><img src="~/css/index.png" style="max-width:1140px; height:100vh; "/></div>
+        <div class="right">
+             <h1>Get Start</h1>
+            <div style="display: flex; justify-content: center;">
+               <a class="button" asp-action="Login" asp-controller="User">Login</a>
+              <a class="button" style="margin-left:50px;" asp-action="Register" asp-controller="User">Signup</a> 
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
+
+
+
+
