--- a/Views/Weather/Search.cshtml
+++ b/Views/Weather/Search.cshtml
@@ -1,8 +1,11 @@
-﻿@using Weather_Deatils.Models
+﻿@using System.Web
+@using Weather_Deatils.Models
+@using Weather_Deatils.Controllers
 @model Weather_Deatils.Models.ResultViewModel
 @{
     ViewData["Title"] = "Search";
     ResultViewModel rslt = ViewBag.weatherData;
+    var userId = ViewContext.HttpContext.Request.Query["userId"];
     bool IsSearched = false;
     if (ViewBag.IsSearched != null)
     {
@@ -25,12 +28,15 @@
 	<link href="~/css/weather.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="~/js/weather.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css'>
 </head>
 
 <body>
-    <input type="hidden" id="hdn-userid" value="@ViewBag.userid"></input>
+    
+    <input type="hidden" id="hdn-userid" value="@userId"></input>
     <h1>Weather Dashboard</h1>
+
  
  </body>          
        
@@ -49,7 +55,7 @@
                         <h6>Humidity:@rslt.Humidity%</h6>
                         @{
                             var WFR = " http://openweathermap.org/img/w/" + (@rslt.WeatherIcon + ".png");
-                                <img src="@WFR" asp-append-version="true" />
+                                    <img src="@WFR" asp-append-version="true" />
                         }
                     </div>
                 </div>
@@ -101,6 +107,8 @@
             <button id="btnSearch" class="search-btn">Search</button>
             <div class="separator"></div>
             <button id="btnSaveFav" class="location-btn">SAVE AS FAV<i class='bi bi-bookmark-heart-fill'></i></button>
+                <a class="button" asp-action="FavoriteCities" asp-controller="User" asp-route-userId="@userId">LIST OF FAV CITY</a>
+                <button id="btnlogout" class="btn btn-success">Logout</button>
         </div>
     }
     <div class="cls-weatherDtls" style="display:none">
@@ -127,11 +135,11 @@
 
 
 <script>
-
+  
     $("#btnSaveFav").click(function () {
         debugger;
 		//console.log("Button clicked");
-        var userid = $("#hdn-userid").val();
+        var userid =$("#hdn-userid").val();
         var city = $("#city").val();
 
         if (userid != null && userid != undefined && city != null && city != undefined) {
@@ -158,9 +166,10 @@
 		}
 	});
     $("#btnSearch").click(function () {
+        // var userid = $("#hdn-userid").val();
         var userid = $("#hdn-userid").val();
         var city = $("#city").val();
-
+        debugger;
         if (userid != null && userid != undefined && city != null && city != undefined) {
             $.ajax({
                 url: "@Url.Action("Search", "Weather")",
@@ -170,7 +179,7 @@
                 },
                 type: "POST",
                 success: function (rsltval) {
-                    debugger;
+                   
                     if (rsltval != null && rsltval != undefined) {
                         $(".cls-weatherDtls").html(rsltval);
                         $(".cls-weatherDtls").show();
@@ -184,7 +193,10 @@
             alert("City Not Found");
         }
     });
-
+    $("#btnlogout").click(function () {
+        localStorage.removeItem('jwt');
+        window.location.href = '/Home/Index';
+    })
 </script> 
 
 
