--- a/Views/User/FavoriteCities.cshtml
+++ b/Views/User/FavoriteCities.cshtml
@@ -6,7 +6,8 @@
     var userId = ViewContext.HttpContext.Request.Query["userId"];
 }
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<h1>Search History</h1>
+<h1>
+    Search History </h1>
 
 
 <table class="table">
@@ -17,6 +18,15 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Country)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Temperature)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Wind)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Humidity)
             </th>
             <th></th>
         </tr>
@@ -29,11 +39,33 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Country)
-            <td>
-                <a asp-action="Details" asp-route-id="@item.CityId">Details</a> |
-                <input type="hidden" id="hdn-userid" value="@userId"></input>
-                 <button id="btnSearch" class="search-btn">Delete</button>
             </td>
+            <td>
+                 @Html.DisplayFor(modelItem => item.Temperature)
+            </td>
+             <td>
+                 @Html.DisplayFor(modelItem => item.Wind )
+             </td>
+              <td>
+                  @Html.DisplayFor(modelItem => item.Humidity)
+              </td>
+            <td>
+                    <form asp-action="DeleteCity" asp-controller="User" method="post">
+                        <input type="hidden" name="CityId" value="@item.CityId" />
+                        <input type="hidden" name="userId" value="@userId" />
+                        <button type="submit" class="btn btn-primary">
+                            Remove
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z" />
+                                <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
+                            </svg>
+                        </button>
+                    </form>
+
+
+
+
+            </td> 
         </tr>
 }
     </tbody>
