--- a/Views/User/Register.cshtml
+++ b/Views/User/Register.cshtml
@@ -17,7 +17,7 @@
 			<div class="col-md-8 col-xs-12 col-sm-12 login_form ">
 				<div class="container-fluid">
 					<div class="row">
-						<h2>Register</h2>
+						<h2>Sign up</h2>
 					</div>
 					<div class="row">
 						<form control="" class="form-group">
